--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="logo">
-        <h1>Ushare</h1>
+        <a href="/">Ushare</a>
     </div>
     <div class="icons">
         <div class="github">
