--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -22,6 +22,12 @@
             </div>
         </div>
     </div>
+    <div class="right">
+        <div class="hero-heading">
+            SIMPLE, SUPERFAST
+            FILE SHARING WEB APP
+        </div>
+    </div>
 </section>
 
 <script src="/js/upload.js"></script>
