--- a/public/css/downloadCard.css
+++ b/public/css/downloadCard.css
@@ -4,6 +4,7 @@
     align-items: center;
     height: calc(100% - 80px);
     width: 100%;
+    padding: 50px;
 }
 
 .filename {
@@ -11,6 +12,8 @@
     width: 100%;
     border: var(--border);
     margin-top: 20px;
+    height: 100px;
+    border-radius: 10px;
 }
 
 .btn {
@@ -25,39 +28,39 @@
     background: var(--hover-color);
 }
 
-.download-section {
-    padding: 50px;
+.download-section .download-card {
+    height: 90%;
+    border: var(--border);
+    border-radius: 20px;
+    padding: 20px;
+    position: relative;
 }
 
-.download-section .download-card {
-    min-height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.download-section .download-card .top {
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+.download-section .download-card .bottom a {
+    display: block;
+}
+
+.download-section .download-card .bottom {
+    position: absolute;
+    width: auto;
+    bottom: 30px;
+    left: 20px;
 }
 
 .download-section .download-card h1 {
     color: var(--primary-color);
     text-align: center;
-}
-
-
-@media screen and (max-width: 640px) {
-    .navbar {
-        padding: 10px 20px;
-    }
-
-    .navbar .logo h1 {
-        font-size: 30px;
-    }
-
-    .navbar .github svg {
-        height: 30px;
-        width: 30px;
-        cursor: pointer;
-    }
+    margin-bottom: 10px;
 }
 
 .filesize {
-    margin-top: 10px;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
