--- a/public/css/uploadCard.css
+++ b/public/css/uploadCard.css
@@ -1,6 +1,22 @@
 .upload-section {
     height: calc(100vh - 80px);
     padding: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.upload-section .right {
+    width: 50%;
+    padding-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.upload-section .right .hero-heading {
+    font-size: 60px;
+    font-weight: bold;
+    color: var(--primary-color);
 }
 
 .card {
@@ -18,6 +34,10 @@
 
 .card .bottom {
     margin-top: 20px;
+}
+
+.card .upload-box p {
+    text-align: center;
 }
 
 .card .top h1 {
